# irl_robot_drivers

./: CMakeLists.txt  README.md  package.xml
docs/doxygen/: Doxyfile
docs/doxygen/html/: annotated.html  classCoppeliaController-members.html  classCoppeliaController.html  classRobotSim-members.html  classRobotSim.html  classes.html  coppelia__controller_8h_source.html  dir_6dd6c2b28e1e07c323b26d2f4f31ef62.html  dir_d046ede7c7f929222948b702e5dfa1ee.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  robot__sim_8h_source.html  structRobotSim_1_1sim__object-members.html  structRobotSim_1_1sim__object.html
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
include/coppelia_controller/: coppelia_controller.h
include/coppelia_controller/sim_devices/: robot_sim.h
launch/: coppelia_controller.launch
src/: coppelia_controller.cpp  coppelia_controller_main.cpp
src/sim_devices/: robot_sim.cpp
